--- a/Leccion_10/src/main/resources/templates/layout/plantilla.html
+++ b/Leccion_10/src/main/resources/templates/layout/plantilla.html
@@ -22,6 +22,10 @@
 		<span> &copy;[[#{plantilla.pie-pagina}]]<a
 			href="http://www.globalmentoring.com.mx" target="_blank">GlobalMentoring.com.mx</a>
 		</span>
+		</br></br>
+		<form method="POST" th:action="@{/logout}">
+			<a href="#" onclick="this.parentNode.submit();">Logout</a>
+		</form>
 	</footer>
 </body>
 </html>
